week_1 / chapter 1&2 kaggle 실습 제외

--- a/week_1/chapter_1.ipynb
+++ b/week_1/chapter_1.ipynb
@@ -4,9 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CHAPTER 01. 파이썬 기반의 머신러닝과 생태계\n",
-    "  \n",
-    "### 01. 머신러닝 개념  \n",
+    "# CHAPTER 01. 파이썬 기반의 머신러닝과 생태계"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 목차\n",
+    "\n",
+    "* [머신러닝 기초 개념](#머신러닝-기초-개념)\n",
+    "* [넘파이](#넘파이)\n",
+    "* [판다스](#판다스)\n",
+    "* [DataFrame 행/열 삭제](#DataFrame-행/열-삭제)\n",
+    "* [index와 reset_index](#index와-reset_index)\n",
+    "* [DataFrame의 인덱싱](#DataFrame의-인덱싱)\n",
+    "* [타이타닉 데이터로 해보는 연습](#타이타닉-데이터로-해보는-연습)\n",
+    "* [불린 인덱싱 / 복합 조건 연결식](#불린-인덱싱-/-복합-조건-연결식)\n",
+    "* [정렬, Aggregation 함수, GroupBy 적용](#정렬,-Aggregation-함수,-GroupBy-적용)\n",
+    "* [groupby() 적용](#groupby()-적용)\n",
+    "* [결손 데이터 처리](#결손-데이터-처리)\n",
+    "* [apply lambda로 데이터 가공](#apply-lambda로-데이터-가공)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 머신러닝 기초 개념\n",
     "- 머신러닝 \n",
     "    - 애플리케이션을 수정하지 않고도 데이터를 기반으로 패턴을 학습하고 결과를 예측하는 알고리즘 기법을 통칭  \n",
     "    - 데이터 내의 패턴을 스스로 인지하고 신뢰도 있는 예측 결과를 도출  \n",
@@ -23,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 03. 넘파이\n",
+    "### 넘파이\n",
     "- 수치해석용 Python 라이브러리\n",
     "    - C로 구현 (파이썬용 C라이브러리)\n",
     "    - 빠른 수치 계산을 위한 Structured Array 제공\n",
@@ -184,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **04.판다스**\n",
+    "### **판다스**\n",
     "- 데이터 : 일반적으로 2차원 (row * column)\n",
     "- numpy보다 유연하고 편리한 데이터 핸들링\n",
     "- 핵심 객체 : DataFrame(행,열로 구성된 2차원 데이터를 담은 데이터 구조체)\n",
@@ -356,16 +381,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **DataFrame 행/열 삭제**\n",
+    "### DataFrame 행/열 삭제\n",
     "\n",
     "- **DataFrame 데이터 삭제 : df.drop()**\n",
     "    - axis = 1 : column 삭제\n",
     "        - df.drop(['col1','col2',...], axis=1)\n",
     "    - axis = 0 : row 삭제\n",
     "    - inplace = True : 원본파괴\n",
-    "    - inplace = False (default) : 새로운 객체로 받아야 함  \n",
-    "      \n",
-    "#### **index와 reset_index**\n",
+    "    - inplace = False (default) : 새로운 객체로 받아야 함  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### index와 reset_index\n",
     "- **DataFrame_name.index or Series_name.index : generator와 같은 상태 (반복문 대상 가능)**\n",
     "    - 리스트 형태로 출력 : df.index.values or series.index.values\n",
     "  \n",
@@ -506,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **DataFrame의 인덱싱**\n",
+    "### **DataFrame의 인덱싱**\n",
     "\n",
     "- **DataFrame의 [ ]연산자**\n",
     "    - DataFrame 바로 뒤의 '[ ]'안에 들어갈 수 있는 것?\n",
@@ -552,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **타이타닉 데이터로 해보는 연습**"
+    "### **타이타닉 데이터로 해보는 연습**"
    ]
   },
   {
@@ -895,7 +925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **불린 인덱싱 / 복합 조건 연결식**\n",
+    "### **불린 인덱싱 / 복합 조건 연결식**\n",
     "    - df[df[컬럼]에 대한 조건][[여러 컬럼들]] -> 컬럼설정 시 이중대괄호 주의\n",
     "    - df.loc[불린식, [컬럼들]]\n",
     "    - 복합 조건 연결식\n",
@@ -1283,7 +1313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **정렬, Aggregation 함수, GroupBy 적용**\n",
+    "### **정렬, Aggregation 함수, GroupBy 적용**\n",
     "- DataFrame, Series의 정렬 : sort_values()\n",
     "    - value_counts()는 series만 됨. sort_values()는 DataFrame도 됨\n",
     "    - 주요 파라미터 : by, ascending, inplace\n",
@@ -1510,7 +1540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **groupby() 적용**\n",
+    "### **groupby() 적용**\n",
     "- matplotlib 등 그림 그리기 전에 많이 사용함\n",
     "- by에 칼럼을 입력하면 대상 칼럼으로 groupby됨\n",
     "- DataFrame에 groupby()를 호출하면 DataFrameGroupBy라는 또 다른 형태의 DataFrame 반환\n",
@@ -1819,7 +1849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **groupby에서 컬럼별로 다른 agg 적용하기!**\n",
+    "### **groupby에서 컬럼별로 다른 agg 적용하기!**\n",
     "- agg()의 입력 값으로 dictionary mapping을 사용\n",
     "- 컬럼 : agg함수 로 매칭시킴"
    ]
@@ -1906,7 +1936,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **결손 데이터 처리**\n",
+    "### **결손 데이터 처리**\n",
     "- 결손데이터(Missing Data) : 칼럼에 값이 없는, 즉 NULL인 경우를 의미, numpy의 NaN으로 표시\n",
     "- 결손데이터를 채우는 과정이 중요한 이유\n",
     "    - **머신러닝은 기본적으로 이 NaN값을 처리 하지 않음**\n",
@@ -2109,7 +2139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **apply lambda로 데이터 가공**\n",
+    "### **apply lambda로 데이터 가공**\n",
     "- apply함수에 lambda식을 결합해 DataFrame이나 Series의 레코드별로 데이터를 가공\n",
     "- pandas의 경우 칼럼에 일괄적으로 데이터 가공을 하는 것이 속도는 더 빠름\n",
     "- 복잡한 데이터 가공이 필요한 경우에 apply lambda 사용\n",
