--- a/week_1/chapter_2.ipynb
+++ b/week_1/chapter_2.ipynb
@@ -4,8 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CHAPTER 02.scikit-learn\n",
+    "# CHAPTER 02.scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 목차\n",
     "\n",
+    "* [01. scikit-learn](#01.-scikit-learn)\n",
+    "* [02. iris 품종 예측](#02.-iris-품종-예측)\n",
+    "* [03. sklearn 기반 프레임워크](#03.-sklearn-기반-프레임워크)\n",
+    "* [04. Model selection module](#04.-Model-selection-module)\n",
+    "* [05. 데이터 전처리(Data Preprocessing)](#05.-데이터-전처리(Data-Preprocessing))\n",
+    "\n",
+    "* [train_test_split()](#train_test_split())\n",
+    "* [교차 검증](#교차-검증)\n",
+    "* [KFold 교차 검증](#KFold-교차-검증)\n",
+    "* [Stratified K Fold](#Stratified-K-Fold)\n",
+    "* [cross_val_score()](#편리한-교차-검증,-cross_val_score())\n",
+    "* [cross_validate() API](#cross_validate()-API)\n",
+    "* [GridSearchCV](#GridSearchCV---교차-검증,-최적-하이퍼-파라미터-튜닝을-한번에-할-수-있는-API)\n",
+    "\n",
+    "* [피처 스케일링과 정규화](#피처-스케일링과-정규화)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 01. scikit-learn\n",
     "- 머신러닝 라이브러리 중 가장 많이 사용됨\n",
     "- 특징\n",
@@ -1315,7 +1343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. 데이터 전처리(Data Preprocessing)\n",
+    "## 05. 데이터 전처리(Data Preprocessing)\n",
     "- ML AL이 data에 기반하므로, 데이터를 어떻게 처리하느냐에 따라 결과가 달라질 수 있음.\n",
     "  \n",
     "- sklearn의 ML AL을 적용하기 전 반드시 해야할 전처리\n",
