week_2 / chapter 3 : evaluation

--- a/week_2/chapter_3.ipynb
+++ b/week_2/chapter_3.ipynb
@@ -316,12 +316,12 @@
     "- Positive data set의 예측 성능에 좀 더 초점을 맞춘 평가 지표  \n",
     "  \n",
     "- 정밀도(양성예측도) : 예측을 Positive로 한 대상 중에 예측과 실제값이 Positive로 일치한 데이터의 비율\n",
-    "    - positive 예측 성능을 더욱 정밀하게 측정하기 위한 평가 지표이기에 양성 예측도라고도 불림.\n",
-    "$$  정밀도(Precision) = \\frac {TP} {FP+TP} $$  \n",
+    "    - positive 예측 성능을 더욱 정밀하게 측정하기 위한 평가 지표이기에 양성 예측도라고도 불림.  \n",
+    "$$ Precision = \\frac {TP} {FP+TP} $$  \n",
     "  \n",
     "- 재현율 : 실제 값이 Positive인 대상 중에 예측과 실제 값이 Positive로 일치한 데이터의 비율\n",
-    "    - 민감도(Sensitivity) 또는 TPR(True Positive Rate)라고도 불림.\n",
-    "$$  재현율(Recall) = \\frac {TP} {FN+TP} $$  \n",
+    "    - 민감도(Sensitivity) 또는 TPR(True Positive Rate)라고도 불림.  \n",
+    "$$ Recall = \\frac {TP} {FN+TP} $$  \n",
     "\n",
     "- 재현율과 정밀도 모두 TP를 높이려 하지만 재현율은 FN(예측 negative, 실제 positive)을 낮추는 데에 초점을 맞춤. 정밀도는 FP(예측 positive, 실제 negative)을 낮추는데에 목적을 둠. \n",
     "- 재현율과 정밀도 모두 챙기는 것이 바람직함.\n",
