week_2 / chapter 3 : evaluation

--- a/week_2/chapter_3.ipynb
+++ b/week_2/chapter_3.ipynb
@@ -280,7 +280,8 @@
     "    - FN : 예측값을 Negative 값 0으로 예측했고 실제 값은 Positive 값 1\n",
     "    - FP : 예측값을 Positive 값 1으로 예측했고 실제 값은 Negative 값 0\n",
     "- 오차행렬 상에서의 정확도 정의\n",
-    "$$ 정확도(Accuray) = \\frac {예측 결과와 실제 값이 동일한 건수} {전체 예측 데이터 수} = \\frac {(TN+TP)} {(TN+TP+FP+FN)} $$ "
+    "\n",
+    "$$ Accuracy = \\frac {Number\\,of\\,data\\,with\\,the\\,same\\,predicted\\,results} {Number\\,of\\,Total\\,Predicted\\,Data} = \\frac {TN+TP)} {(TN+TP+FP+FN)} $$ "
    ]
   },
   {
