week_2 / chapter 3 : evaluation

--- a/week_2/chapter_3.ipynb
+++ b/week_2/chapter_3.ipynb
@@ -281,7 +281,7 @@
     "    - FP : 예측값을 Positive 값 1으로 예측했고 실제 값은 Negative 값 0\n",
     "- 오차행렬 상에서의 정확도 정의\n",
     "\n",
-    "$$ Accuracy = \\frac {Number\\,of\\,data\\,with\\,the\\,same\\,predicted\\,results} {Number\\,of\\,Total\\,Predicted\\,Data} = \\frac {TN+TP)} {(TN+TP+FP+FN)} $$ "
+    "$$ Accuracy = \\frac {Number\\,of\\,data\\,with\\,the\\,same\\,predicted\\,results} {Number\\,of\\,Total\\,Predicted\\,Data} = \\frac {TN+TP} {TN+TP+FP+FN} $$ "
    ]
   },
   {
